# velox

./: CMakeLists.txt  Makefile
.github/workflows/: linux-gluten-build.yml  preliminary_checks.yml
CMake/: FindCppKafka.cmake  FindPulsarClient.cmake
CMake/resolve_dependency_modules/: README.md  cppkafka.cmake  cpr.cmake  grpc.cmake  librdkafka.cmake  pulsarclient.cmake  rdkafka.cmake  rocksdb.cmake
CMake/resolve_dependency_modules/cppkafka/: remove-uninstall-target.cmake
CMake/resolve_dependency_modules/grpc/: grpc-tools-target.patch
CMake/resolve_dependency_modules/pulsarclient/: pulsar-client-cpp-subproject.patch
scripts/: Dockerfile.ubuntu20  check.py  setup-centos9.sh  setup-deps-ubuntu20.sh  setup-helper-functions.sh  setup-macos.sh  setup-manylinux.sh  setup-ubuntu.sh
velox/: CMakeLists.txt
velox/buffer/tests/: CMakeLists.txt
velox/common/base/tests/: CMakeLists.txt
velox/common/caching/tests/: CMakeLists.txt
velox/common/file/: FileSystems.h
velox/common/memory/tests/: CMakeLists.txt  MockSharedArbitratorTest.cpp  StreamArenaTest.cpp
velox/connectors/: CMakeLists.txt  Connector.h
velox/connectors/filesystem/: CMakeLists.txt  FileSystemColumnHandle.cpp  FileSystemColumnHandle.h  FileSystemConfig.cpp  FileSystemConfig.h  FileSystemConnector.cpp  FileSystemConnector.h  FileSystemDataSink.cpp  FileSystemDataSink.h  FileSystemIndexSource.cpp  FileSystemIndexSource.h  FileSystemIndexTable.h  FileSystemIndexTableHandle.h  FileSystemInsertTableHandle.cpp  FileSystemInsertTableHandle.h
velox/connectors/filesystem/tests/: CMakeLists.txt  FileSystemConnectorTest.cpp  FileSystemConnectorTestBase.h
velox/connectors/from_elements/: CMakeLists.txt  FromElementsConnector.cpp  FromElementsConnector.h  FromElementsConnectorSplit.cpp  FromElementsConnectorSplit.h  FromElementsSource.cpp  FromElementsSource.h  FromElementsTableHandle.cpp  FromElementsTableHandle.h
velox/connectors/fuzzer/: CMakeLists.txt  DiscardDataSink.cpp  DiscardDataSink.h  FuzzerConnector.cpp  FuzzerConnector.h  FuzzerConnectorSplit.h
velox/connectors/hive/: SplitReader.cpp
velox/connectors/kafka/: CMakeLists.txt  KafkaConfig.cpp  KafkaConfig.h  KafkaConnector.cpp  KafkaConnector.h  KafkaConnectorSplit.cpp  KafkaConnectorSplit.h  KafkaConsumer.cpp  KafkaConsumer.h  (+5 more)
velox/connectors/nexmark/tests/: CMakeLists.txt  NexmarkConnectorTest.cpp  NexmarkConnectorTestBase.h  NexmarkGeneratorRandomTest.cpp  NexmarkGeneratorTest.cpp  NexmarkUtilsTest.cpp
velox/connectors/print/tests/: CMakeLists.txt  PrintSinkTest.cpp  PrintTableHandleTest.cpp
velox/connectors/pulsar/tests/: CMakeLists.txt  PulsarConnectorIntegrationTest.cpp  PulsarConnectorTest.cpp  run_pulsar_standalone_test.sh
velox/core/: PlanNode.h  QueryConfig.h
velox/dwio/text/tests/writer/: CMakeLists.txt
velox/exec/: CMakeLists.txt  Driver.cpp  HashPartitionFunction.cpp  HashPartitionFunction.h  NestedLoopJoinProbe.cpp  NestedLoopJoinProbe.h  Operator.h  PartitionFunction.cpp  StreamingAggregation.cpp  TableScan.cpp  TableScan.h  TableWriter.h  Task.cpp  Task.h
velox/experimental/stateful/: CMakeLists.txt  CombinedWatermarkStatus.cpp  CombinedWatermarkStatus.h  EmptyOperator.h  EventTimeTimerService.h  GroupWindowAggregator.cpp  GroupWindowAggregator.h  InternalPriorityQueue.h  InternalTimerService.h  KeySelector.cpp  KeySelector.h  LocalWindowAggregator.cpp  LocalWindowAggregator.h  NativeCallbackBridge.h  ProcessingTimeScheduler.h  ProcessingTimeService.h  ProcessingTimeTimerService.h  RuntimeContext.h  StatefulOperator.cpp  StatefulOperator.h  StatefulPlanNode.cpp  StatefulPlanNode.h  StatefulPlanner.cpp  StatefulPlanner.h  StatefulTask.cpp  StatefulTask.h  StreamElement.h  StreamExchange.cpp  StreamExchange.h  StreamJoin.cpp  StreamJoin.h  StreamJoinOperator.cpp  StreamJoinOperator.h  StreamKeyedOperator.cpp  StreamKeyedOperator.h  StreamLookupJoin.cpp  StreamLookupJoin.h  StreamPartition.cpp  StreamPartition.h  StringFormatter.cpp  (+14 more)
velox/experimental/stateful/agg/: AggsHandleFunction.h  CMakeLists.txt  GroupAggregator.cpp  GroupAggregator.h
velox/experimental/stateful/functions/: KeyedProcessFunction.h
velox/experimental/stateful/join/: CMakeLists.txt  JoinRecordStateView.h  JoinRecordStateViews.cpp  JoinRecordStateViews.h
velox/experimental/stateful/rank/: AppendOnlyTopNRanker.cpp  AppendOnlyTopNRanker.h  CMakeLists.txt  RowTimeDeduplicateRanker.cpp  RowTimeDeduplicateRanker.h
velox/experimental/stateful/state/: CMakeLists.txt  CheckpointListener.h  CheckpointOptions.h  HashMapStateBackend.cpp  HashMapStateBackend.h  HeapKeyedStateBackend.cpp  HeapKeyedStateBackend.h  HeapListState.h  HeapMapState.h  HeapValueState.h  InternalKeyContext.h  KeyedStateBackend.h  RocksDBKeyedStateBackend.cpp  RocksDBKeyedStateBackend.h  RocksDBState.h  RocksDBStateBackend.cpp  RocksDBStateBackend.h  SerializedCompositeKeyBuilder.h  Snapshotable.h  State.cpp  State.h  StateBackend.h  StateDescriptor.h  StateEntry.h  StateMap.h  StateTable.h  StateTtlConfig.h  StreamOperatorStateHandler.h
velox/experimental/stateful/tests/: BarrierTest.cpp  CMakeLists.txt  CombinedWatermarkStatusTest.cpp  StringFormatterTest.cpp  StringFormatterTest.h  WatermarkGeneratorTest.cpp
velox/experimental/stateful/udf/: BigoUDF.h  CMakeLists.txt  ExtractDateTime.h  Register.cpp  Register.h  SplitIndex.h
velox/experimental/stateful/udf/tests/: CMakeLists.txt  UDFTest.cpp
velox/experimental/stateful/utils/: MathUtils.h
velox/experimental/stateful/window/: CMakeLists.txt  GroupWindowAggsHandler.cpp  GroupWindowAggsHandler.h  GroupWindowAssigner.cpp  GroupWindowAssigner.h  MergingWindowSet.cpp  MergingWindowSet.h  SliceAssigner.cpp  SliceAssigner.h  TimeWindowUtil.cpp  TimeWindowUtil.h  Window.h  WindowBuffer.cpp  WindowBuffer.h  WindowKey.h  WindowPartitionFunction.cpp  WindowPartitionFunction.h  WindowProcessFunction.cpp  WindowProcessFunction.h  WindowTrigger.cpp  WindowTrigger.h
velox/functions/sparksql/fuzzer/tests/: CMakeLists.txt
velox/row/tests/: CMakeLists.txt
velox/type/: Type.cpp  Type.h
velox/vector/: BaseVector.cpp  FlatVector-inl.h
(+132 files in other folders)
