# Copyright (c) Facebook, Inc. and its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
include(GoogleTest)

add_executable(
  velox_memory_test
  AllocationPoolTest.cpp
  AllocationTest.cpp
  ArbitrationParticipantTest.cpp
  ByteStreamTest.cpp
  CompactDoubleListTest.cpp
  HashStringAllocatorTest.cpp
  MemoryAllocatorTest.cpp
  MemoryArbitratorTest.cpp
  MemoryCapExceededTest.cpp
  MemoryManagerTest.cpp
  MemoryPoolTest.cpp
  MockSharedArbitratorTest.cpp
  RawVectorTest.cpp
  ScratchTest.cpp
  SharedArbitratorTest.cpp
  StreamArenaTest.cpp)

target_link_libraries(
  velox_memory_test
  PRIVATE
    velox_caching
    velox_common_base
    velox_exception
    velox_exec
    velox_exec_test_lib
    velox_memory
    velox_temp_path
    velox_test_util
    velox_vector_fuzzer
    Folly::folly
    fmt::fmt
    gflags::gflags
    glog::glog
    GTest::gmock
    GTest::gtest
    GTest::gtest_main
    re2::re2)

gtest_add_tests(velox_memory_test "" AUTO)
set_tests_properties(
  "AllocationPoolTest.hugePages"
  "AllocationPoolTest.oomCleanUp"
  "AllocationTest.basic"
  "AllocationTest.append"
  "AllocationTest.appendMove"
  "AllocationTest.maxPageRunLimit"
  "ArbitrationParticipantTest.config"
  "ArbitrationParticipantTest.constructor"
  "ArbitrationParticipantTest.getGrowTargets"
  "ArbitrationParticipantTest.reclaimableFreeCapacityAndShrink"
  "ArbitrationParticipantTest.minReclaimBytesStats"
  "ArbitrationParticipantTest.reclaimableUsedCapacityAndReclaim"
  "ArbitrationParticipantTest.checkCapacityGrowth"
  "ArbitrationParticipantTest.grow"
  "ArbitrationParticipantTest.shrink"
  "ArbitrationParticipantTest.abort"
  "ArbitrationParticipantTest.reclaimLock"
  "ArbitrationParticipantTest.abortedCheck"
  "ArbitrationParticipantTest.capacityCheck"
  "ArbitrationParticipantTest.arbitrationCandidate"
  "ArbitrationParticipantTest.arbitrationOperation"
  "ArbitrationParticipantTest.arbitrationOperationStats"
  "ArbitrationParticipantTest.arbitrationOperationWait"
  "ArbitrationParticipantTest.arbitrationOperationFuzzerTest"
  "ArbitrationParticipantTest.arbitrationOperationState"
  "ArbitrationParticipantTest.arbitrationOperationTimedLock"
  "ByteStreamTest.iobufConsume"
  "ByteStreamTest.outputStream"
  "ByteStreamTest.bufferedOutputStream"
  "ByteStreamTest.newRangeAllocation"
  "ByteStreamTest.randomRangeAllocationFromMultiStreamsTest"
  "ByteStreamTest.bits"
  "ByteStreamTest.appendWindow"
  "ByteStreamTest.byteRange"
  "ByteStreamTest.reuse"
  "ByteStreamTest.unalignedWrite"
  "ByteStreamTest.hugeWrite"
  "*/InputByteStreamTest.inputStream/*"
  "*/InputByteStreamTest.emptyInputStreamError/*"
  "*/InputByteStreamTest.remainingSize/*"
  "*/InputByteStreamTest.toString/*"
  "*/InputByteStreamTest.readBytesNegativeSize/*"
  "*/InputByteStreamTest.skipNegativeSize/*"
  "*/InputByteStreamTest.nextViewNegativeSize/*"
  "*/InputByteStreamTest.view/*"
  "*/InputByteStreamTest.tellP/*"
  "*/InputByteStreamTest.skip/*"
  "*/InputByteStreamTest.seekp/*"
  "CompactDoubleListTest.basic"
  "HashStringAllocatorTest.multipleFree"
  "HashStringAllocatorTest.multipleFreeAncCheckCurrentBytes"
  "HashStringAllocatorTest.headerToString"
  "HashStringAllocatorTest.allocate"
  "HashStringAllocatorTest.allocateLarge"
  "HashStringAllocatorTest.finishWrite"
  "HashStringAllocatorTest.multipart"
  "HashStringAllocatorTest.mixedMultipart"
  "HashStringAllocatorTest.rewrite"
  "HashStringAllocatorTest.stlAllocator"
  "HashStringAllocatorTest.stlAllocatorWithSet"
  "HashStringAllocatorTest.alignedStlAllocatorWithF14Map"
  "HashStringAllocatorTest.alignedStlAllocatorLargeAllocation"
  "HashStringAllocatorTest.stlAllocatorOverflow"
  "HashStringAllocatorTest.externalLeak"
  "HashStringAllocatorTest.freeLists"
  "HashStringAllocatorTest.strings"
  "HashStringAllocatorTest.sizeAndPosition"
  "HashStringAllocatorTest.storeStringFast"
  "HashStringAllocatorTest.clear"
  "HashStringAllocatorTest.freezeAndExecute"
  "HashStringAllocatorTest.inputStream"
  "*/MemoryAllocatorTest.mmapAllocatorInit/*"
  "*/MemoryAllocatorTest.allocationPool/*"
  "*/MemoryAllocatorTest.allocationClass1/*"
  "*/MemoryAllocatorTest.allocationClass2/*"
  "*/MemoryAllocatorTest.stats/*"
  "*/MemoryAllocatorTest.singleAllocation/*"
  "*/MemoryAllocatorTest.increasingSize/*"
  "*/MemoryAllocatorTest.increasingSizeWithThreads/*"
  "*/MemoryAllocatorTest.minSizeClass/*"
  "*/MemoryAllocatorTest.externalAdvise/*"
  "*/MemoryAllocatorTest.nonContiguousFailure/*"
  "*/MemoryAllocatorTest.allocContiguous/*"
  "*/MemoryAllocatorTest.allocContiguousFail/*"
  "*/MemoryAllocatorTest.allocContiguousGrow/*"
  "*/MemoryAllocatorTest.allocateBytes/*"
  "*/MemoryAllocatorTest.allocateBytesWithAlignment/*"
  "*/MemoryAllocatorTest.allocateZeroFilled/*"
  "*/MemoryAllocatorTest.StlMemoryAllocator/*"
  "*/MemoryAllocatorTest.nonContiguousAllocationBounds/*"
  "*/MemoryAllocatorTest.contiguousAllocation/*"
  "*/MemoryAllocatorTest.allocatorCapacity/*"
  "*/MemoryAllocatorTest.allocatorCapacityWithThreads/*"
  "MmapArenaTest.basic"
  "MmapArenaTest.managedMmapArenas"
  "MmapArenaTest.managedMmapArenasFree"
  "MmapArenaTest.managedMmapArenasFreeError"
  "*/MemoryAllocatorTest.unmap/*"
  "MmapConfigTest.sizeClasses"
  "MemoryArbitrationTest.stats"
  "MemoryArbitrationTest.create"
  "MemoryArbitrationTest.createWithDefaultConf"
  "MemoryArbitrationTest.queryMemoryCapacity"
  "MemoryArbitrationTest.memoryPoolCapacityOnCreation"
  "MemoryArbitrationTest.reservedCapacityFreeByPoolRelease"
  "MemoryArbitrationTest.arbitratorStats"
  "MemoryArbitratorFactoryTest.register"
  "MemoryArbitratorFactoryTest.create"
  "MemoryReclaimerTest.common"
  "MemoryReclaimerTest.mockReclaim"
  "MemoryReclaimerTest.mockReclaimMoreThanAvailable"
  "MemoryReclaimerTest.scopedReclaimedBytesRecorder"
  "MemoryReclaimerTest.orderedReclaim"
  "MemoryReclaimerTest.skipNonReclaimableChild"
  "MemoryReclaimerTest.arbitrationContext"
  "MemoryReclaimerTest.scopedMemoryPoolArbitrationCtx"
  "MemoryReclaimerTest.concurrentRandomMockReclaims"
  "MemoryArbitrationTest.reclaimerStats"
  "*/MemoryCapExceededTest.singleDriver/*"
  "*/MemoryCapExceededTest.multipleDrivers/*"
  "*/MemoryCapExceededTest.allocatorCapacityExceededError/*"
  "MemoryManagerTest.ctor"
  "MemoryManagerTest.createWithCustomArbitrator"
  "MemoryManagerTest.addPoolFailure"
  "MemoryManagerTest.addPool"
  "MemoryManagerTest.addPoolWithArbitrator"
  "MemoryManagerTest.defaultMemoryManager"
  "MemoryHeaderTest.addDefaultLeafMemoryPool"
  "MemoryManagerTest.defaultMemoryUsageTracking"
  "MemoryManagerTest.memoryPoolManagement"
  "MemoryManagerTest.globalMemoryManager"
  "MemoryManagerTest.alignmentOptionCheck"
  "MemoryManagerTest.concurrentPoolAccess"
  "MemoryManagerTest.quotaEnforcement"
  "MemoryManagerTest.disableMemoryPoolTracking"
  "*/MemoryPoolTest.ctor/*"
  "*/MemoryPoolTest.addChild/*"
  "*/MemoryPoolTest.dropChild/*"
  "*/MemoryPoolTest.smallMmapMemoryAllocation/*"
  "*/MemoryPoolTest.bigMmapMemoryAllocation/*"
  "*/MemoryPoolTest.allocTest/*"
  "*/MemoryPoolTest.usedBytes/*"
  "*/MemoryPoolTest.growFailures/*"
  "*/MemoryPoolTest.grow/*"
  "*/MemoryPoolTest.releasableMemory/*"
  "*/MemoryPoolTest.ReallocTestSameSize/*"
  "*/MemoryPoolTest.ReallocTestHigher/*"
  "*/MemoryPoolTest.ReallocTestLower/*"
  "*/MemoryPoolTest.allocateZeroFilled/*"
  "*/MemoryPoolTest.alignmentCheck/*"
  "*/MemoryPoolTest.memoryCapExceptions/*"
  "MemoryPoolTest.GetAlignment"
  "*/MemoryPoolTest.MemoryManagerGlobalCap/*"
  "*/MemoryPoolTest.childUsageTest/*"
  "*/MemoryPoolTest.getPreferredSize/*"
  "*/MemoryPoolTest.customizedGetPreferredSize/*"
  "*/MemoryPoolTest.getPreferredSizeOverflow/*"
  "*/MemoryPoolTest.allocatorOverflow/*"
  "*/MemoryPoolTest.contiguousAllocate/*"
  "*/MemoryPoolTest.contiguousAllocateExceedLimit/*"
  "*/MemoryPoolTest.badContiguousAllocation/*"
  "*/MemoryPoolTest.nonContiguousAllocate/*"
  "*/MemoryPoolTest.allocationFailStats/*"
  "*/MemoryPoolTest.nonContiguousAllocateWithOldAllocation/*"
  "*/MemoryPoolTest.persistentNonContiguousAllocateFailure/*"
  "*/MemoryPoolTest.transientNonContiguousAllocateFailure/*"
  "*/MemoryPoolTest.contiguousAllocateWithOldAllocation/*"
  "*/MemoryPoolTest.persistentContiguousAllocateFailure/*"
  "*/MemoryPoolTest.transientContiguousAllocateFailure/*"
  "*/MemoryPoolTest.contiguousAllocateExceedMemoryPoolLimit/*"
  "*/MemoryPoolTest.persistentContiguousGrowAllocateFailure/*"
  "*/MemoryPoolTest.transientContiguousGrowAllocateFailure/*"
  "*/MemoryPoolTest.contiguousAllocateGrowExceedMemoryPoolLimit/*"
  "*/MemoryPoolTest.nonContiguousAllocationBounds/*"
  "*/MemoryPoolTest.nonContiguousAllocateExceedLimit/*"
  "*/MemoryPoolTest.nonContiguousAllocateError/*"
  "*/MemoryPoolTest.mmapAllocatorCapAllocationError/*"
  "*/MemoryPoolTest.mmapAllocatorCapAllocationZeroFilledError/*"
  "*/MemoryPoolTest.mmapAllocatorCapReallocateError/*"
  "*/MemoryPoolTest.validCheck/*"
  "*/MemoryPoolTest.concurrentUpdateToDifferentPools/*"
  "*/MemoryPoolTest.concurrentUpdatesToTheSamePool/*"
  "*/MemoryPoolTest.concurrentUpdateToSharedPools/*"
  "*/MemoryPoolTest.concurrentPoolStructureAccess/*"
  "MemoryPoolTest.visitChildren"
  "MemoryPoolTest.debugMode"
  "MemoryPoolTest.debugModeWithFilter"
  "*/MemoryPoolTest.shrinkAndGrowAPIs/*"
  "*/MemoryPoolTest.memoryReclaimerSetCheck/*"
  "*/MemoryPoolTest.reclaimAPIsWithDefaultReclaimer/*"
  "*/MemoryPoolTest.usageTrackerOptionTest/*"
  "*/MemoryPoolTest.statsAndToString/*"
  "*/MemoryPoolTest.memoryUsageUpdateCheck/*"
  "*/MemoryPoolTest.maybeReserve/*"
  "*/MemoryPoolTest.maybeReserveFailWithAbort/*"
  "*/MemoryPoolTest.raceBetweenFreeAndFailedAllocation/*"
  "*/MemoryPoolTest.quantizedSize/*"
  "*/MemoryPoolTest.abortAPI/*"
  "*/MemoryPoolTest.abort/*"
  "*/MemoryPoolTest.overuseUnderArbitration/*"
  "*/MemoryPoolTest.allocationWithCoveredCollateral/*"
  "MockSharedArbitrationTest.configToString"
  "MockSharedArbitrationTest.extraConfigs"
  "MockSharedArbitrationTest.constructor"
  "MockSharedArbitrationTest.arbitrationStateCheck"
  "MockSharedArbitrationTest.asyncArbitrationWork"
  "MockSharedArbitrationTest.arbitrationFailures"
  "MockSharedArbitrationTest.shrinkPools"
  "MockSharedArbitrationTest.shrinkPoolsDelayedAbort"
  "MockSharedArbitrationTest.localArbitrationsFromSameQuery"
  "MockSharedArbitrationTest.badNonReclaimableQuery"
  "MockSharedArbitrationTest.globalArbitrationAbortTimeRatio"
  "MockSharedArbitrationTest.globalArbitrationWithoutSpill"
  "MockSharedArbitrationTest.globalArbitrationSmallParticipantLargeGrow"
  "MockSharedArbitrationTest.multipleGlobalRuns"
  "MockSharedArbitrationTest.globalArbitrationEnableCheck"
  "MockSharedArbitrationTest.singlePoolShrinkWithoutArbitration"
  "MockSharedArbitrationTest.singlePoolGrowWithoutArbitration"
  "MockSharedArbitrationTest.ensureMemoryPoolMaxCapacity"
  "MockSharedArbitrationTest.ensureNodeMaxCapacity"
  "MockSharedArbitrationTest.arbitrationAbort"
  "MockSharedArbitrationTest.shutdown"
  "MockSharedArbitrationTest.shutdownWait"
  "MockSharedArbitrationTest.memoryPoolAbortCapacityLimit"
  "MockSharedArbitrationTest.globalArbitrationTimeout"
  "MockSharedArbitrationTest.localArbitrationTimeout"
  "MockSharedArbitrationTest.reclaimLockTimeout"
  "MockSharedArbitrationTest.localArbitrationQueueTimeout"
  "MockSharedArbitrationTest.minReclaimBytes"
  "MockSharedArbitrationTest.globalArbitrationReclaimPct"
  "MockSharedArbitrationTest.noEligibleAbortCandidate"
  "MockSharedArbitrationTest.growWithArbitrationAbort"
  "MockSharedArbitrationTest.singlePoolGrowCapacityWithArbitration"
  "MockSharedArbitrationTest.singlePoolGrowCapacityFailedWithAbort"
  "MockSharedArbitrationTest.arbitrateWithCapacityShrink"
  "MockSharedArbitrationTest.arbitrateWithMemoryReclaim"
  "MockSharedArbitrationTest.abortWithNoCandidate"
  "MockSharedArbitrationTest.reclaimWithNoCandidate"
  "MockSharedArbitrationTest.arbitrateBySelfMemoryReclaim"
  "MockSharedArbitrationTest.noAbortOnRequestWhenArbitrationFails"
  "MockSharedArbitrationTest.orderedArbitration"
  "MockSharedArbitrationTest.enterArbitrationException"
  "MockSharedArbitrationTest.noArbitratiognFromAbortedPool"
  "MockSharedArbitrationTest.memoryReclaimeFailureTriggeredAbort"
  "MockSharedArbitrationTest.concurrentArbitrationRequests"
  "MockSharedArbitrationTest.arbitrationFailure"
  "MockSharedArbitrationTest.concurrentArbitrations"
  "MockSharedArbitrationTest.concurrentArbitrationWithTransientRoots"
  "*/RawVectorTest.basic/*"
  "*/RawVectorTest.padding/*"
  "*/RawVectorTest.resize/*"
  "*/RawVectorTest.copyAndMove/*"
  "*/RawVectorTest.iota/*"
  "*/RawVectorTest.iterator/*"
  "*/RawVectorTest.toStdVector/*"
  "ScratchTest.basic"
  "ScratchTest.large"
  "*/SharedArbitrationTestWithThreadingModes.reclaimToOrderBy/*"
  "*/SharedArbitrationTestWithThreadingModes.runtimeStats/*"
  "*/SharedArbitrationTestWithThreadingModes.reserveReleaseCounters/*"
  "StreamArenaTest.newRange"
  "StreamArenaTest.randomRange"
  PROPERTIES DISABLED TRUE)

if(VELOX_ENABLE_BENCHMARKS)
  add_executable(velox_fragmentation_benchmark FragmentationBenchmark.cpp)

  target_link_libraries(
    velox_fragmentation_benchmark PRIVATE velox_memory Folly::folly
                                          gflags::gflags glog::glog)

  add_executable(velox_concurrent_allocation_benchmark
                 ConcurrentAllocationBenchmark.cpp)

  target_link_libraries(velox_concurrent_allocation_benchmark
                        PRIVATE velox_memory velox_time)
endif()
